1/23/18 Dungeon generator
1/29/18 Moved into git repo: https://github.com/knoxaramav2/rogue_327
1/29/18 Refactored into multiple files
1/29/18 Get/Set cell attributes
1/30/18 Better room generation
1/30/18 Hallways, better room generation
1/30/18 Command line arguments
1/30/18 Save/Load
2/06/18 Fixed Save/Load bug (mostly)
2/06/18 Priority Queue, Player Icon
2/13/18 Fixed load Player
2/13/18 BFS dijkstra's SPT 
2/14/18 Dijkstras coming more slowly than thought
2/18/18 Dijkstras
2/20/18 Monster generation
2/20/18 Monster movement, bug fixes, bugs created
3/5/18  Better macros, small bug fixes