@@ -4,17 +4,20 @@ CC = gcc
 CFLAGS = -std=c11 -g -Iutil
 OUT = dungeon
 CLEANTXT = *.o *.a *.exe
-SRC = launcher.c generators.c dungeon.c console.c algo.c file.c entity.c game.c
+SRC = launcher.c generators.c dungeon.c console.c algo.c file.c entity.c game.c _win_unix.c
+
+MACROS = -D=__CYGWIN
 
 ifeq ($(shell uname), Linux)
 	RUNPATH = $(OUT)
 else
 #windows
 	RUNPATH = $(OUT).exe
+
 endif
 
 all:
-	$(CC) $(SRC) $(CFLAGS) -o $(OUT)
+	$(CC) $(SRC) $(CFLAGS) $(MACROS) -o $(OUT) -lncurses
 
 #clean extensions, allow for .exe or unix name convention
 .PHONY: clean
@@ -23,6 +26,6 @@ clean:
 
 .PHONY: run
 run:
-	./$(RUNPATH) --nummon 2
+	./$(RUNPATH) --nummon 0
 		
 
