@@ -1,0 +1,22 @@
+#include <stdio.h>
+#include <termios.h>
+#include <unistd.h>
+
+#include "_win_unix.h"
+
+#ifdef __CYGWIN
+
+int getch(void)
+{
+    struct termios oldattr, newattr;
+    int ch;
+    tcgetattr( STDIN_FILENO, &oldattr );
+    newattr = oldattr;
+    newattr.c_lflag &= ~( ICANON | ECHO );
+    tcsetattr( STDIN_FILENO, TCSANOW, &newattr );
+    ch = getchar();
+    tcsetattr( STDIN_FILENO, TCSANOW, &oldattr );
+    return ch;
+}
+
+#endif
