@@ -1,17 +1,16 @@
-Exception: STATUS_INTEGER_DIVIDE_BY_ZERO at rip=001004032CA
-rax=000000007F0671E3 rbx=0000000600001DEC rcx=0000000000000000
-rdx=0000000000000000 rsi=000000018024D760 rdi=00000000FFFFCDF0
-r8 =0000000000000006 r9 =0000000000000000 r10=0000000100000000
-r11=000000060004BA20 r12=0000000000000000 r13=0000000000000000
+Exception: STATUS_ACCESS_VIOLATION at rip=00100401B57
+rax=000000230000002B rbx=0000000600001C94 rcx=000000060004BA60
+rdx=0000000000000008 rsi=000000018024D760 rdi=00000000FFFFCDF0
+r8 =0000000000FF0000 r9 =0000000000000000 r10=0000000100000000
+r11=0000000100401593 r12=0000000000000000 r13=0000000000000000
 r14=0000000000000000 r15=0000000000000000
-rbp=00000000FFFFCA70 rsp=00000000FFFFCA50
-program=D:\Dev\class\327\rogue_327\dungeon.exe, pid 8720, thread main
+rbp=00000000FFFFCB00 rsp=00000000FFFFCA80
+program=D:\Dev\class\327\rogue_327\dungeon.exe, pid 11832, thread main
 cs=0033 ds=002B es=002B fs=0053 gs=002B ss=002B
 Stack trace:
 Frame        Function    Args
-000FFFFCA70  001004032CA (0000000003F, 00000000000, 00000000000, 00600003850)
-000FFFFCB00  00100401BA8 (00000000000, 00000000000, 0018013F700, 03F00000008)
-000FFFFCBD0  001004023B0 (000FFFFCC40, 000FFFFCCB0, 00000000000, 00000000000)
+000FFFFCB00  00100401B57 (00000000000, 00000000005, 0018013F700, 00F00000010)
+000FFFFCBD0  001004023B5 (000FFFFCC40, 000FFFFCCB0, 00000000000, 00000000000)
 000FFFFCBF0  0010040147F (000FFFFCC40, 00000000000, 00000000030, FF0700010302FF00)
 000FFFFCCB0  00180047BC2 (00000000000, 00000000000, 00000000000, 00000000000)
 00000000000  00180045863 (00000000000, 00000000000, 00000000000, 00000000000)
