@@ -1,0 +1,13 @@
+#ifndef __WIN_UNIX
+#define __WIN_UNIX
+
+/*
+Because I'm a sod who's computer does terrible, war crime level
+things when I try to install linux or run it in a VM.
+
+If it ain't broke, don't critique it.
+*/
+
+int getch();
+
+#endif
